@@ -1,6 +1,9 @@
 
 ChangeLog
-   [ + added, - removed, * changed ]
+ [ + added, - removed, * changed ]
+
+ * 29Jun2011 Modified SVN propset using
+              svn propset svn:keywords "Date Revision Author HeadURL Id"
 
    * (29/Jun/2011) Added extrae_version.h to track in extrae_user_events.h the
                    current version of the instrumentation package
